Add errors on view

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,18 @@
 <%= form_for @user, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :_type, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :_type, :class => 'text_field' %>
+
+  <%- if @user.errors.any? %>
+  
+    <div id="error_explanation">
+      <h2><%== pluralize(@user.errors.count, "error") %> prohibited from being saved:</h2>
+
+      <ul>
+      <%- @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <%- end %>
+      </ul>
     </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :_id, :class => 'text_field' %>
-    </div>
-  </div>
+  <%- end %>
+
   <div class="control-group">
     <%= f.label :email, :class => 'control-label' %>
     <div class="controls">
@@ -18,51 +20,15 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :encrypted_password, :class => 'control-label' %>
+    <%= f.label :password, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :encrypted_password, :class => 'text_field' %>
+      <%= f.text_field :password, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :reset_password_token, :class => 'control-label' %>
+    <%= f.label :password_confirmation, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :reset_password_token, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :reset_password_sent_at, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :reset_password_sent_at, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :remember_created_at, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :remember_created_at, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :current_sign_in_at, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :current_sign_in_at, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :last_sign_in_at, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :last_sign_in_at, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :current_sign_in_ip, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :current_sign_in_ip, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :last_sign_in_ip, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :last_sign_in_ip, :class => 'text_field' %>
+      <%= f.text_field :password_confirmation, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
